# hexapod_remote

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  control.py  gait_demo.py  logging.yaml  pyproject.toml  serial_console.py  ui.py
hexapod_remote/: config.py  enum.py  gait.py  leg.py  robot.py  serial.py  vector.py
robot_scripts/: script
ui/: main_window.ui
